接口声明
